Department_Automation/app/src/main/java/com/example/department_automation/ADD_MARK.java
package com.example.department_automation;

import androidx.appcompat.app.AppCompatActivity;

import android.content.SharedPreferences;
import android.os.Bundle;
import android.preference.PreferenceManager;
import android.view.View;
import android.widget.Button;
import android.widget.EditText;
import android.widget.Toast;

import com.android.volley.DefaultRetryPolicy;
import com.android.volley.Request;
import com.android.volley.RequestQueue;
import com.android.volley.Response;
import com.android.volley.VolleyError;
import com.android.volley.toolbox.StringRequest;
import com.android.volley.toolbox.Volley;

import org.json.JSONArray;
import org.json.JSONObject;

import java.util.HashMap;
import java.util.Map;

public class ADD_MARK extends AppCompatActivity {
    EditText mark;
    Button B1;
    SharedPreferences sh;
    String sub;
    String student;
    String sem;
    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_add_mark);
        sh = PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
        mark = findViewById(R.id.editTextTextPersonName7);
        B1 = findViewById(R.id.button11);
        sub = getIntent().getStringExtra("sub");
        student = getIntent().getStringExtra("sid");
        sem = getIntent().getStringExtra("sem");

        B1.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view) {

                String mak=mark.getText().toString();

                String url = sh.getString("url", "")+"/andaddmark";
                RequestQueue requestQueue = Volley.newRequestQueue(getApplicationContext());
                StringRequest postRequest = new StringRequest(Request.Method.POST, url,
                        new Response.Listener<String>() {
                            @Override
                            public void onResponse(String response) {
//                        Toast.makeText(getApplicationContext(), response, Toast.LENGTH_LONG).show();

                                try {
                                    JSONObject jsonObj = new JSONObject(response);
                                    if (jsonObj.getString("status").equalsIgnoreCase("ok")) {

                                        Toast.makeText(ADD_MARK.this, "mark added", Toast.LENGTH_SHORT).show();

                                    }
                                    else if(jsonObj.getString("status").equalsIgnoreCase("updated")){
                                        Toast.makeText(ADD_MARK.this, "mark Updated", Toast.LENGTH_SHORT).show();

                                    }
                                    else {
                                        Toast.makeText(getApplicationContext(), "Not found", Toast.LENGTH_LONG).show();
                                    }

                                } catch (Exception e) {
                                    Toast.makeText(getApplicationContext(), "Error" + e.getMessage().toString(), Toast.LENGTH_SHORT).show();
                                }
                            }
                        },
                        new Response.ErrorListener() {
                            @Override
                            public void onErrorResponse(VolleyError error) {
                                // error
                                Toast.makeText(getApplicationContext(), "eeeee" + error.toString(), Toast.LENGTH_SHORT).show();
                            }
                        }
                ) {

                    //                value Passing android to python
                    @Override
                    protected Map<String, String> getParams() {
                        SharedPreferences sh = PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
                        Map<String, String> params = new HashMap<String, String>();
                        params.put("id", sh.getString("id", ""));//passing to python
                        params.put("mark",mak);
                        params.put("sem",sem);
                        params.put("sub",sub);
                        params.put("sid",student);
                        return params;
                    }
                };


                int MY_SOCKET_TIMEOUT_MS = 100000;

                postRequest.setRetryPolicy(new DefaultRetryPolicy(
                        MY_SOCKET_TIMEOUT_MS,
                        DefaultRetryPolicy.DEFAULT_MAX_RETRIES,
                        DefaultRetryPolicy.DEFAULT_BACKOFF_MULT));
                requestQueue.add(postRequest);
            }
        });
    }
}